fix overflow

--- a/assets/scss/comm.scss
+++ b/assets/scss/comm.scss
@@ -5,6 +5,9 @@
 // 공통요소 : 헤더, 풋터, 버튼, 아이콘, 박스
 
 // 공통
+html {
+  overflow-x: hidden;
+}
 body {
   background-color: $b;
   color: $w;
